[project]
name = "larnitech-ha-bridge"
version = "0.1.11"
description = "Home Assistant bridge for Larnitech-compatible systems using MQTT Discovery"
requires-python = ">=3.12"
dependencies = [
  "websockets>=12.0",
  "paho-mqtt>=2.1.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
larnitech-ha-bridge = "larnitech_ha_bridge.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
